force-app/main/default/objects/Training_Personnel__c/Training_Personnel__c.object-meta.xml
<CustomObject>
    <label>Training Personnel</label>
    <nameField>
        <label>Training Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Personnels</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>