force-app/main/default/objects/Training_Personnel__c/fields/Check_in_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Time__c</fullName>
    <formula>Training_Task_User__r.Check_in_Time__c</formula>
    <label>Check-in Time</label>
    <type>DateTime</type>
</CustomField>