force-app/main/default/objects/Training_Personnel__c/fields/Conference_Link__c.field-meta.xml
<CustomField>
    <fullName>Conference_Link__c</fullName>
    <formula>HYPERLINK( Training_Task__r.Conference_Link__c , Training_Task__r.Conference_Link__c)</formula>
    <label>Conference Link</label>
    <type>Text</type>
</CustomField>