force-app/main/default/objects/Training_Personnel__c/fields/Examination__c.field-meta.xml
<CustomField>
    <fullName>Examination__c</fullName>
    <formula>Text(Training_Task__r.Examination__c)</formula>
    <label>Examination</label>
    <type>Text</type>
</CustomField>