force-app/main/default/objects/Training_Personnel__c/fields/Examination_Method__c.field-meta.xml
<CustomField>
    <fullName>Examination_Method__c</fullName>
    <formula>Text(Training_Task__r.Examination_Method__c )</formula>
    <label>Examination Method</label>
    <type>Text</type>
</CustomField>