force-app/main/default/objects/Training_Personnel__c/fields/Examinations_Number__c.field-meta.xml
<CustomField>
    <fullName>Examinations_Number__c</fullName>
    <formula>Training_Task_User__r.Examinations_Number__c</formula>
    <label>Examinations Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>