force-app/main/default/objects/Training_Personnel__c/fields/Pass_The_Examination__c.field-meta.xml
<CustomField>
    <fullName>Pass_The_Examination__c</fullName>
    <formula>Text(Training_Task_User__r.Pass_The_Examination__c )</formula>
    <label>Pass The Examination</label>
    <type>Text</type>
</CustomField>