force-app/main/default/objects/Training_Personnel__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Training Personnels</relationshipLabel>
    <relationshipName>Training_Personnels</relationshipName>
    <type>Lookup</type>
</CustomField>