force-app/main/default/objects/Training_Personnel__c/fields/Trainees_Number__c.field-meta.xml
<CustomField>
    <fullName>Trainees_Number__c</fullName>
    <formula>Training_Task__r.Trainees_Number__c</formula>
    <label>Trainees Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>