force-app/main/default/objects/Training_Personnel__c/fields/Training_Address__c.field-meta.xml
<CustomField>
    <fullName>Training_Address__c</fullName>
    <formula>Training_Task__r.Training_Address__c</formula>
    <label>Training Address</label>
    <type>Text</type>
</CustomField>