force-app/main/default/objects/Training_Personnel__c/fields/Training_Content__c.field-meta.xml
<CustomField>
    <fullName>Training_Content__c</fullName>
    <formula>Training_Task__r.Training_Content__c</formula>
    <label>Training Content</label>
    <type>Text</type>
</CustomField>