force-app/main/default/objects/Training_Personnel__c/fields/Training_Task_User__c.field-meta.xml
<CustomField>
    <fullName>Training_Task_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Task User</label>
    <referenceTo>Training_Task_User__c</referenceTo>
    <relationshipLabel>Training Personnels</relationshipLabel>
    <relationshipName>Training_Personnels</relationshipName>
    <type>Lookup</type>
</CustomField>