force-app/main/default/objects/Training_Personnel__c/fields/Training_Time__c.field-meta.xml
<CustomField>
    <fullName>Training_Time__c</fullName>
    <formula>Training_Task__r.Training_Time__c</formula>
    <label>Training Time</label>
    <type>DateTime</type>
</CustomField>