force-app/main/default/objects/Training_Personnel__c/fields/Training_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Type__c</fullName>
    <formula>TEXT(Training_Task__r.Training_Type__c)</formula>
    <label>Training Type</label>
    <type>Text</type>
</CustomField>