force-app/main/default/objects/Training_Personnel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Training_Content_Type__c</columns>
    <columns>Training_Content__c</columns>
    <columns>Trainer_Name__c</columns>
    <columns>Training_Type__c</columns>
    <columns>Training_Time__c</columns>
    <columns>Training_Address__c</columns>
    <columns>Check_in_Status__c</columns>
    <columns>Pass_The_Examination__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Training Personnels</label>
</ListView>